(lang dune 2.7)
(generate_opam_files true)
(version 0.1.0)
(authors "Alan Hu <hu.ala@northeastern.edu>")
(maintainers "Alan Hu <hu.ala@northeastern.edu>")
(license MIT)
(documentation https://alan-j-hu.github.io/ocaml-oniguruma/)
(source (github alan-j-hu/ocaml-oniguruma))
(name oniguruma)

(package
  (name oniguruma)
  (synopsis "Oniguruma bindings")
  (description "Oniguruma bindings"))
